@@ -1038,7 +1038,9 @@ test_multiple_events_for_same_fd(void)
    cleanup_test();
 }
 
-int decode_int(uint32_t *pnumber, struct evbuffer *evbuf);
+int evtag_decode_int(uint32_t *pnumber, struct evbuffer *evbuf);
+int evtag_encode_tag(struct evbuffer *evbuf, uint32_t number);
+int evtag_decode_tag(uint32_t *pnumber, struct evbuffer *evbuf);
 
 void
 read_once_cb(int fd, short event, void *arg)
@@ -1105,7 +1107,7 @@ evtag_int_test(void)
 	}
 
 	for (i = 0; i < TEST_MAX_INT; i++) {
-		if (decode_int(&integer, tmp) == -1) {
+		if (evtag_decode_int(&integer, tmp) == -1) {
 			fprintf(stderr, "decode %d failed", i);
 			exit(1);
 		}
@@ -1168,6 +1170,46 @@ evtag_fuzz(void)
 	fprintf(stdout, "\t%s: OK\n", __func__);
 }
 
+static void
+evtag_tag_encoding(void)
+{
+	struct evbuffer *tmp = evbuffer_new();
+	uint32_t integers[TEST_MAX_INT] = {
+		0xaf0, 0x1000, 0x1, 0xdeadbeef, 0x00, 0xbef000
+	};
+	uint32_t integer;
+	int i;
+
+	for (i = 0; i < TEST_MAX_INT; i++) {
+		int oldlen, newlen;
+		oldlen = EVBUFFER_LENGTH(tmp);
+		evtag_encode_tag(tmp, integers[i]);
+		newlen = EVBUFFER_LENGTH(tmp);
+		fprintf(stdout, "\t\tencoded 0x%08x with %d bytes\n",
+		    integers[i], newlen - oldlen);
+	}
+
+	for (i = 0; i < TEST_MAX_INT; i++) {
+		if (evtag_decode_tag(&integer, tmp) == -1) {
+			fprintf(stderr, "decode %d failed", i);
+			exit(1);
+		}
+		if (integer != integers[i]) {
+			fprintf(stderr, "got %x, wanted %x",
+			    integer, integers[i]);
+			exit(1);
+		}
+	}
+
+	if (EVBUFFER_LENGTH(tmp) != 0) {
+		fprintf(stderr, "trailing data");
+		exit(1);
+	}
+	evbuffer_free(tmp);
+
+	fprintf(stdout, "\t%s: OK\n", __func__);
+}
+
 void
 evtag_test(void)
 {
@@ -1176,6 +1218,8 @@ evtag_test(void)
 	evtag_init();
 	evtag_int_test();
 	evtag_fuzz();
+
+	evtag_tag_encoding();
 
 	fprintf(stdout, "OK\n");
 }
@@ -1188,6 +1232,7 @@ rpc_test(void)
 	struct run *run;
 	struct evbuffer *tmp = evbuffer_new();
 	struct timeval tv_start, tv_end;
+	uint32_t tag;
 	int i;
 
 	fprintf(stdout, "Testing RPC: ");
@@ -1219,10 +1264,20 @@ rpc_test(void)
 		exit(1);
 	}
 
-	evtag_marshal_msg(tmp, 0, msg);
+	evtag_marshal_msg(tmp, 0xdeaf, msg);
+
+	if (evtag_peek(tmp, &tag) == -1) {
+		fprintf(stderr, "Failed to peak tag.\n");
+		exit (1);
+	}
+
+	if (tag != 0xdeaf) {
+		fprintf(stderr, "Got incorrect tag: %0x.\n", tag);
+		exit (1);
+	}
 
 	msg2 = msg_new();
-	if (evtag_unmarshal_msg(tmp, 0, msg2) == -1) {
+	if (evtag_unmarshal_msg(tmp, 0xdeaf, msg2) == -1) {
 		fprintf(stderr, "Failed to unmarshal message.\n");
 		exit(1);
 	}
